Changelog
=========

5.1-dev - (unreleased)
----------------------
* Bug fix: added external methods to fix the problematic unfinished
  folders from EEAFigures
  [tiberich refs #5312]
* Feature: added a manager-only @@gopdb view to enable dropping to pdb console
  [tiberich]
* Upgrade step: fix _at_creation_flag for folders in eeafigures:
      Create an external method with module name: 
          Products.EEAPloneAdmin.find_empty_figure_folders
      function name: 
          fix_1
      Execute it, save the output for future reference.
  [tiberich refs #5312]
* Upgrade step: in portal_types, remove Folder as allowed addable content for
  EEAFigure 
  [tiberich refs #5312]

5.0 - (2012-06-20)
------------------
* Feature: Improved unmarkcreationflag method.
  [demarant refs #5312]
* Bug fix: removed definition of is_empty
  [tiberich refs #5289]

4.25 - (2012-06-18)
-------------------
* Bug fix: patched ATContentTypes calendarsuport to accept location field
  as a tuple
  [ichimdav fixes #5284]

4.24 - (2012-06-14)
-------------------
* Bug fix: fixed bug introduced in previous egg
  [ichimdav #5229]

4.23 - (2012-06-14)
-------------------
* Bug fix: show results with tinymce when using translations
  [ichimdav #5229]

4.22 - (2012-06-12)
-------------------
* Bug fix: added script to migrate provider_url on ExternalDataSpecs
  [tiberich fixes #5232]
* Upgrade step:
  Create an external method with module name: 
      Products.EEAPloneAdmin.fix_externaldataspecs 
  function name: 
      fix_externaldataspecs
  Execute it, save the output for future reference.
  [tiberich #5232]
* Bug fix: added override for datecomponents from plone.app.form
  [tiberich #5236]
* Upgrade step:
    - Within ZMI > portal_setup > Upgrades Tab run upgrades for
      Products.CMFPlone (4.1.2 -> 4.1.5) 
      [voineali #5116]
    - Within ZMI > portal_setup > Import Tab > Import All Steps from
      'Plone Discussions'